==> m5stack/M5Core2/src/AXP192.cpp <==
#include "AXP192.h"

void AXP192::begin(mbus_mode_t mode) { begin(); }

void AXP192::begin() {
  Wire1.begin(21, 22);
  Wire1.setClock(400000);

  //AXP192 30H
  Write1Byte(0x30, (Read8bit(0x30) & 0x04) | 0X02);
  Serial.printf("axp: vbus limit off\n");

  //AXP192 GPIO1:OD OUTPUT
  Write1Byte(0x92, Read8bit(0x92) & 0xf8);
  Serial.printf("axp: gpio1 init\n");

  //AXP192 GPIO2:OD OUTPUT
  Write1Byte(0x93, Read8bit(0x93) & 0xf8);
  Serial.printf("axp: gpio2 init\n");

  //AXP192 RTC CHG
  Write1Byte(0x35, (Read8bit(0x35) & 0x1c) | 0xa2);
  Serial.printf("axp: rtc battery charging enabled\n");

  SetESPVoltage(3350);
  Serial.printf("axp: esp32 power voltage was set to 3.35v\n");

  SetLcdVoltage(2800);
  Serial.printf("axp: lcd backlight voltage was set to 2.80v\n");

  SetLDOVoltage(2, 3300);  //Periph power voltage preset (LCD_logic, SD card)
  Serial.printf("axp: lcd logic and sdcard voltage preset to 3.3v\n");

  SetLDOVoltage(3, 2000);  //Vibrator power voltage preset
  Serial.printf("axp: vibrator voltage preset to 2v\n");

  SetLDOEnable(2, true);
  SetDCDC3(true);  // LCD backlight
  SetLed(true);

  SetCHGCurrent(kCHG_100mA);
  //SetAxpPriphPower(1);
  //Serial.printf("axp: lcd_logic and sdcard power enabled\n\n");

  //pinMode(39, INPUT_PULLUP);

  //AXP192 GPIO4
  Write1Byte(0X95, (Read8bit(0x95) & 0x72) | 0X84);

  Write1Byte(0X36, 0X4C);

  Write1Byte(0x82, 0xff);

  SetLCDRSet(0);
  delay(100);
  SetLCDRSet(1);
  delay(100);
  // I2C_WriteByteDataAt(0X15,0XFE,0XFF);

  SetPeripherialsPower(true);

  // axp: check v-bus status
  if (Read8bit(0x00) & 0x08) {
    Write1Byte(0x30, Read8bit(0x30) | 0x80);
    // if v-bus can use, disable M-Bus 5V output to input
    SetBusPowerMode(kMBusModeInput);
  } else {
    // if not, enable M-Bus 5V output
    SetBusPowerMode(kMBusModeOutput);
  }
}

void AXP192::Write1Byte(uint8_t Addr, uint8_t Data) {
  Wire1.beginTransmission(0x34);
  Wire1.write(Addr);
  Wire1.write(Data);
  Wire1.endTransmission();
}

uint8_t AXP192::Read8bit(uint8_t Addr) {
  Wire1.beginTransmission(0x34);
  Wire1.write(Addr);
  Wire1.endTransmission();
  Wire1.requestFrom(0x34, 1);
  return Wire1.read();
}

uint16_t AXP192::Read16bit(uint8_t Addr) {
  uint16_t ReData = 0;
  Wire1.beginTransmission(0x34);
  Wire1.write(Addr);
  Wire1.endTransmission();
  Wire1.requestFrom(0x34, 2);
  for (int i = 0; i < 2; i++) {
    ReData <<= 8;
    ReData |= Wire1.read();
  }
  return ReData;
}

uint32_t AXP192::Read24bit(uint8_t Addr) {
  uint32_t ReData = 0;
  Wire1.beginTransmission(0x34);
  Wire1.write(Addr);
  Wire1.endTransmission();
  Wire1.requestFrom(0x34, 3);
  for (int i = 0; i < 3; i++) {
    ReData <<= 8;
    ReData |= Wire1.read();
  }
  return ReData;
}

uint32_t AXP192::Read32bit(uint8_t Addr) {
  uint32_t ReData = 0;
  Wire1.beginTransmission(0x34);
  Wire1.write(Addr);
  Wire1.endTransmission();
  Wire1.requestFrom(0x34, 4);
  for (int i = 0; i < 4; i++) {
    ReData <<= 8;
    ReData |= Wire1.read();
  }
  return ReData;
}

void AXP192::SetLDOVoltage(uint8_t number, uint16_t voltage) {
  uint8_t vdata = calcVoltageData(voltage, 3300, 1800, 100) & 0x0F;
  switch (number) {
    //uint8_t reg, data;
    case 2:
      Write1Byte(0x28, (Read8bit(0x28) & 0x0F) | (vdata << 4));
      break;
    case 3:
      Write1Byte(0x28, (Read8bit(0x28) & 0xF0) | vdata);
      break;
  }
}
