==> rjmcdougall/BB-BMS/ESPController/src/AXP192.cpp <==
#include "AXP192.h"
#define USE_ESP_IDF_LOG 1

void AXP192::begin(mbus_mode_t mode)
{

    ESP_LOGI(TAG, "AXP192 Begin");

    //Wire1.begin(21, 22);
    //Wire1.setClock(400000);

    //AXP192 30H
    Write1Byte(0x30, (Read8bit(0x30) & 0x04) | 0X02);
    ESP_LOGI(TAG, "axp: vbus limit off");

    //AXP192 GPIO1:OD OUTPUT
    Write1Byte(0x92, Read8bit(0x92) & 0xf8);
    ESP_LOGI(TAG, "axp: gpio1 init\n");

    //AXP192 GPIO2:OD OUTPUT
    Write1Byte(0x93, Read8bit(0x93) & 0xf8);
    ESP_LOGI(TAG, "axp: gpio2 init\n");

    //AXP192 RTC CHG
    Write1Byte(0x35, (Read8bit(0x35) & 0x1c) | 0xa2);
    ESP_LOGI(TAG, "axp: rtc battery charging enabled");

    SetESPVoltage(3350);
    ESP_LOGI(TAG, "axp: esp32 power voltage was set to 3.35v\n");

    SetLcdVoltage(2800);
    ESP_LOGI(TAG, "axp: lcd backlight voltage was set to 2.80v");

    SetLDOVoltage(2, 3300); //Periph power voltage preset (LCD_logic, SD card)
    ESP_LOGI(TAG, "axp: lcd logic and sdcard voltage preset to 3.3v");

    SetLDOVoltage(3, 2000); //Vibrator power voltage preset
    ESP_LOGI(TAG, "axp: vibrator voltage preset to 2v");

    SetLDOEnable(2, true);
    SetDCDC3(true); // LCD backlight
    SetLed(true);

    SetCHGCurrent(kCHG_100mA);
    //SetAxpPriphPower(1);
    //ESP_LOGI(TAG, "axp: lcd_logic and sdcard power enabled\n\n");

    //pinMode(39, INPUT_PULLUP);

    //AXP192 GPIO4
    Write1Byte(0X95, (Read8bit(0x95) & 0x72) | 0X84);

    Write1Byte(0X36, 0X4C);

    Write1Byte(0x82,0xff);

    SetLCDRSet(0);
    delay(100);
    SetLCDRSet(1);
    delay(100);
    // I2C_WriteByteDataAt(0X15,0XFE,0XFF);

    //  bus power mode_output
    SetBusPowerMode(mode);
}

void AXP192::Write1Byte(uint8_t Addr, uint8_t Data)
{
    AXPhal->writeByte(I2C_NUM_0, AXP_ADDR, Addr, Data);
}

uint8_t AXP192::Read8bit(uint8_t Addr)
{
    uint8_t value;
    AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr, &value);
    return value;
}

uint16_t AXP192::Read16bit(uint8_t Addr)
{
    unsigned int ret;
    uint8_t tmp_value[2];

    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr, &tmp_value[0]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr + 1, &tmp_value[1]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = tmp_value[0] | (tmp_value[1] << 8);
    return ret;
}

uint32_t AXP192::Read24bit(uint8_t Addr)
{
    unsigned int ret;
    uint8_t tmp_value[3];

    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr, &tmp_value[0]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr + 1, &tmp_value[1]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr + 2, &tmp_value[2]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = tmp_value[0] | (tmp_value[1] << 8) | (tmp_value[2] << 16);
    return ret;
}

uint32_t AXP192::Read32bit(uint8_t Addr)
{
    unsigned int ret;
    uint8_t tmp_value[4];

    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr, &tmp_value[0]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr + 1, &tmp_value[1]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr + 2, &tmp_value[2]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = AXPhal->readByte(I2C_NUM_0, AXP_ADDR, Addr + 3, &tmp_value[3]);
    if (ret != ESP_OK) {
        return 0;
    }
    ret = tmp_value[0] | (tmp_value[1] << 8) | (tmp_value[2] << 16) | (tmp_value[3] << 24);
    return ret;
}

void AXP192::SetLDOVoltage(uint8_t number, uint16_t voltage)
{
    voltage = (voltage > 3300) ? 15 : (voltage / 100) - 18;
    switch (number)
    {
    //uint8_t reg, data;
    case 2:
        Write1Byte(0x28, (Read8bit(0x28) & 0X0F) | (voltage << 4));
        break;
    case 3:
        Write1Byte(0x28, (Read8bit(0x28) & 0XF0) | voltage);
        break;
    }
}
